--- a/_includes/_partials/footer.html
+++ b/_includes/_partials/footer.html
@@ -21,6 +21,10 @@
     <i class="fa fa-fw fa-weixin"></i>
     <a class="theme-link" href="https://mp.weixin.qq.com/s/lm14EySamxKjeVbmqG_Nng">微信公众号</a>
   </div>
+
+  <div class="toutiao">
+    <a class="theme-link" href="https://www.toutiao.com/c/user/3878726964623608/#mid=1669604127702019">头条号</a>
+  </div>
 </div>
 
 <!-- <div class="powered-by">
