--- a/_includes/_third-party/comments/valine.html
+++ b/_includes/_third-party/comments/valine.html
@@ -8,7 +8,7 @@
       <script>
         var langName = 'zh-new',
             langMode = {  
-                "nick": "昵称或QQ号（选填，QQ号可自动获取QQ昵称和头像）",
+                "nick": "昵称（选填，填 QQ 号可自动读取 QQ 昵称和头像）",
                 "mail": "微信号或邮箱（选填，用于有回复时提醒您，不会公开）",
                 "link": "选填，用于有回复时提醒您，不会公开",
                 "nickFail":"昵称长度须大于3个字节",
