--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -362,6 +362,39 @@
       {% endunless %}
     </div>
 
+    <div class="post-copyright">
+      <div class="copyright" >
+        {% assign current = site.time | date: '%Y' %}
+        {% assign since = site.since | downcase %}
+        &copy; {% if site.since and since != current %} {{ since }} - {% endif %}
+        <span itemprop="copyrightYear">{{ current }}</span>
+        <!-- <span class="with-love">
+          <i class="fa fa-{{ site.authoricon }}"></i>
+        </span> -->
+        <span class="author" itemprop="copyrightHolder">{{ site.author }}</span>
+      </div>
+
+      <div class="copyright-claim">
+        <p>经作者授权后方可转载</p>
+      </div>
+
+      <div class="footer-links">
+        <div class="weibo">
+          <i class="fa fa-fw fa-weibo"></i>
+          <a class="theme-link" href="https://www.weibo.com/u/7415485975">微博</a>
+        </div>
+
+        <div class="wechat">
+          <i class="fa fa-fw fa-weixin"></i>
+          <a class="theme-link" href="https://mp.weixin.qq.com/s/lm14EySamxKjeVbmqG_Nng">微信公众号</a>
+        </div>
+
+        <div class="toutiao">
+          <a class="theme-link" href="https://www.toutiao.com/c/user/3878726964623608/#mid=1669604127702019">头条号</a>
+        </div>
+      </div>
+    </div>
+
     <footer class="post-footer">
       {% if post.tags and post.tags.size != 0 and is_index == nil or is_index == false %}
         <div class="post-tags">
