--- a/_sass/_common/scaffolding/base.scss
+++ b/_sass/_common/scaffolding/base.scss
@@ -21,8 +21,6 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  padding: 0;
   font-weight: bold;
   line-height: 1.5;
   font-family: $font-family-headings;
@@ -50,7 +48,7 @@ h5, h6 { margin: 30px 0 10px; }
   }
 }
 
-p { margin: 0 0 20px 0; }
+p { margin: 0.8em 0; }
 
 a {
   color: $link-color;
