--- a/_sass/_common/scaffolding/tables.scss
+++ b/_sass/_common/scaffolding/tables.scss
@@ -5,11 +5,15 @@ table {
   border-spacing: 0;
   border: 1px solid $table-border-color;
   font-size: $table-font-size;
-  table-layout: fixed;
   word-wrap: break-all;
 }
+
+table>thead>tr {
+  background-color: $grey-light;
+}
+
 table>tbody>tr {
-  &:nth-of-type(odd) { background-color: $table-row-odd-bg-color; }
+  &:nth-of-type(even) { background-color: $table-row-odd-bg-color; }
   &:hover { background-color: $table-row-hover-bg-color; }
 }
 
@@ -21,7 +25,7 @@ caption, th, td {
 }
 
 th, td {
-  border-bottom: 3px solid $table-cell-border-bottom-color;
+  border-bottom: 2px solid $table-cell-border-bottom-color;
   border-right: 1px solid $table-cell-border-right-color;
   text-align: center;
 }
