--- a/_includes/index.html
+++ b/_includes/index.html
@@ -6,13 +6,16 @@
 <a href="/航班列表">最新最全回国航班列表</a>
 <br />
 <br />
+<a href="/一周盘点0713">回国/出国信息一周盘点</a>
+<br />
+<br />
 <a href="/转机情况">世界各地转机情况汇总</a>
 <br />
 <br />
-<a href="/北美路线">北美转机回国可行路线汇总</a>
+<a href="/北美路线">北美回国可行路线汇总</a>
 <br />
 <br />
-<a href="/航司信息">全球航空公司疫情信息页面汇总</a>
+<a href="/航司信息">全球航空公司信息页面入口</a>
 <br />
 <br />
 <a href="/回国经历分享">回国经历分享征集</a>
