--- a/_includes/index.html
+++ b/_includes/index.html
@@ -3,10 +3,10 @@
 {% if site.paginate > 0 %}{% assign posts = paginator.posts %}{% endif %}
 <br />
 <center>
-<a href="/航班列表">最新最全回国航班列表</a>
+<a href="/回国航班列表">最新最全回国航班列表</a>
 <br />
 <br />
-<a href="/一周盘点0713">回国/出国信息一周盘点</a>
+<a href="/出国航班列表">最新最全出国航班列表</a>
 <br />
 <br />
 <a href="/转机情况">世界各地转机情况汇总</a>
